# gh-label

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.js  taze.config.js  taze.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.husky/: pre-commit
src/: App.vue  app.css  index.d.ts  index.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  error.rs  gh.rs  main.rs
src/assets/: style.css
src/components/: GitHubIcon.vue  LabelChip.vue  LabelClone.vue  LabelEditor.vue  LabelGrid.vue
src/components/icons/: Delete.vue  Edit.vue  IDelete.vue  IEdit.vue  ILoading.vue  ISync.vue  Loading.vue  Sync.vue
src/composables/: index.ts  use-invoke.ts
src/lib/: enum.ts  label.ts  storage.ts  stores.ts  utils.ts
src/lib/components/: Button.svelte  Card.svelte  Clone.svelte  Editor.svelte  Grid.svelte  Input.svelte  Label.svelte  Table.svelte
src/lib/icons/: Delete.svelte  Edit.svelte  Loading.svelte  Sync.svelte
src/router/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/clone/: +page.svelte
src/routes/list/: +page.svelte
src/stores/: config.ts  index.ts
src/utils/: enum.ts  index.ts
src/views/: LabelView.vue  StatusView.vue
src/windows/main/: App.vue  index.html  index.ts
types/: auto-imports.d.ts  components.d.ts  index.d.ts
