[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
description = "Simple GUI for editing GitHub labels "
homepage = "https://github.com/ferreira-tb/gh-label"
repository = "https://github.com/ferreira-tb/gh-label"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
