[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
description = "Simple GUI for editing GitHub labels "
homepage = "https://github.com/ferreira-tb/gh-label"
repository = "https://github.com/ferreira-tb/gh-label"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.79"
publish = false

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
