[package]
name = "gh-label"
version = "0.4.1"
publish = false

[package.description]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[build-dependencies.tauri-build]
version = "1.5.1"
features = []

[dependencies]
serde_json = "1.0.114"
thiserror = "1.0.57"
tauri-plugin-manatsu = "0.5.0"
tauri-plugin-window-state = "0.1.0"
anyhow = "1.0.80"

[dependencies.tauri]
version = "1.6.1"
features = ["devtools", "dialog-confirm"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "process", "rt-multi-thread"]

[features]
custom-protocol = ["tauri/custom-protocol"]
