[package]
name = "gh-label"
version = "0.5.1"
publish = false

[package.description]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.10"
features = []

[dependencies]
serde_json = "1.0.114"
thiserror = "1.0.58"
tauri-plugin-manatsu = "0.7.0"
tauri-plugin-window-state = "2.0.0-beta.3"
anyhow = "1.0.81"
tauri-plugin-dialog = "2.0.0-beta.3"

[dependencies.tauri]
version = "2.0.0-beta.13"
features = []

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version = "1.36.0"
features = [
    "macros",
    "process",
    "rt-multi-thread",
]

[features]
custom-protocol = ["tauri/custom-protocol"]
