[package]
name = "gh-label"
version = "0.5.1"
publish = false

[package.description]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[build-dependencies.tauri-build]
version = "2.0.0-beta.17"
features = []

[dependencies]
anyhow = "1.0.86"
serde_json = "1.0.117"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-manatsu = "0.10.12"
thiserror = "1.0.61"

[dependencies.tauri]
version = "2.0.0-beta.22"
features = []

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[features]
custom-protocol = ["tauri/custom-protocol"]
